testsuite/poke.pkl/cast-array-diag-4.pk
/* { dg-do compile } */

type Matrix = int[2][2];
var a = [[1,2,3],[4,5,6]] as Matrix; /* { dg-error "" } */
